test_ouput.txt
============================= test session starts ==============================
platform linux -- Python 3.13.5, pytest-8.4.2, pluggy-1.6.0
rootdir: /home/fortune/Desktop/py_project/js_Trading/trading-test
configfile: pyproject.toml
plugins: anyio-4.8.0, timeout-2.4.0
collected 0 items / 1 error

==================================== ERRORS ====================================
_______________ ERROR collecting backend/tests/test_ws_market.py _______________
../../../../miniconda3/lib/python3.13/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
../../../../miniconda3/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../../../miniconda3/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../../../../miniconda3/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
backend/tests/test_ws_market.py:6: in <module>
    from app.main import app
backend/app/main.py:4: in <module>
    from app.api.v1.router import api_router
backend/app/api/v1/router.py:2: in <module>
    from app.api.v1.endpoints import data, health, recommendations, stocks, market, derivatives, insider, technicals, reasoning, execution, alerts, analytics, ws_market
backend/app/api/v1/endpoints/recommendations.py:5: in <module>
    from ....services.recommendation_service import RecommendationService
backend/app/services/recommendation_service.py:14: in <module>
    from ..database.db_manager import DatabaseManager
backend/app/database/__init__.py:6: in <module>
    from .db_manager import DatabaseManager
E     File "/home/fortune/Desktop/py_project/js_Trading/trading-test/backend/app/database/db_manager.py", line 1416
E       def save_alert(self, alert_data: Dict[str, Any]):
E   SyntaxError: expected 'except' or 'finally' block
=============================== warnings summary ===============================
backend/app/core/config.py:22
  /home/fortune/Desktop/py_project/js_Trading/trading-test/backend/app/core/config.py:22: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/
    @validator("BACKEND_CORS_ORIGINS", pre=True)

backend/app/core/config.py:45
  /home/fortune/Desktop/py_project/js_Trading/trading-test/backend/app/core/config.py:45: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/
    @validator("SQLALCHEMY_DATABASE_URI", pre=True)

backend/app/core/config.py:56
  /home/fortune/Desktop/py_project/js_Trading/trading-test/backend/app/core/config.py:56: PydanticDeprecatedSince20: Pydantic V1 style `@validator` validators are deprecated. You should migrate to Pydantic V2 style `@field_validator` validators, see the migration guide for more details. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.11/migration/
    @validator("REDIS_URI", pre=True)

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
ERROR backend/tests/test_ws_market.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
========================= 3 warnings, 1 error in 1.31s =========================
